[metadata]
name = vulhub-cli
version = 0.0.2
author = owefsad
author_email = owefsad@gmail.com
description = easy command tool for vulhub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.huoxian.cn/
project_urls =
    Bug Tracker = https://github.com/huoxianclub/vulhub-compose/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independents